pagina offerte esclusive

--- a/pixel/head.html
+++ b/pixel/head.html
@@ -1,4 +1,6 @@
-<link
+<!-- <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
-/>
+/> -->
+
+<!-- SCRIPT ACCELASEARCH -->
